# web-forgix-scaler-hackathon

./: .gitignore  Dockerfile  README.md  app.py  check_values.py  docker-compose.yml  inference.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt  run_demo.py  server.py
env/: __init__.py  email_env.py  graders.py  models.py  tasks.py
server/: app.py
