[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-rl-env"
version = "1.0.0"
description = "An OpenEnv-compatible reinforcement learning environment for email management"
authors = [
    {name = "Sriram Thiruveedhula"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0"
]
