[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-rl-env"
version = "1.0.0"
description = "An OpenEnv-compatible reinforcement learning environment for email management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"
